<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/view_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/gif_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_preloader"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/loading"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/view_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="24dp"
        android:visibility="gone">

        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_empty_screen"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/internet_connection_failed"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/txt_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/internet_connection_problem"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/txt_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/retry"
            android:textSize="16sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/view_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_empty_screen"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/empty_screen_text"
            android:textColor="@color/colorGrey"
            android:textSize="14sp"
            android:textStyle="bold"/>

    </LinearLayout>

</FrameLayout>